feat: Add mobile version with header, hero and initial text

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
               >Interactive card details form (07-10-2022)</a
             >
           </li>
+          <li>
+            <a href="./intro-section-with-dropdown-navigation"
+              >Intro section with dropdown navigation (12-10-2022)</a
+            >
+          </li>
         </ol>
       </nav>
     </main>
