--- a/packages/intro-section-with-dropdown-navigation/public/index.html
+++ b/packages/intro-section-with-dropdown-navigation/public/index.html
@@ -9,6 +9,8 @@
       sizes="32x32"
       href="%PUBLIC_URL%/images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap"
