feat: Include hyper link to new challenge

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
               >Intro section with dropdown navigation (12-10-2022)</a
             >
           </li>
+          <li>
+            <a href="./news-homepage">News homepage (21-10-2022)</a>
+          </li>
         </ol>
       </nav>
     </main>
