feat: include news homepage with astro on public domain

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <li>
             <a href="./news-homepage">News homepage (21-10-2022)</a>
           </li>
+          <li>
+            <a href="./news-homepage-with-astro"
+              >News homepage built with astro (28-04-2023)</a
+            >
+          </li>
         </ol>
       </nav>
     </main>
