refactor: update menu labels on startup page

--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
             >
           </li>
           <li>
-            <a href="./news-homepage">News homepage (21-10-2022)</a>
+            <a href="./news-homepage">News homepage - Next.js (21-10-2022)</a>
           </li>
           <li>
-            <a href="./news-homepage-with-astro"
-              >News homepage built with astro (28-04-2023)</a
-            >
+            <a href="./news-homepage-with-astro">
+              News homepage - Astro (28-04-2023)
+            </a>
           </li>
         </ol>
       </nav>
