refactor: use position fixed instead of absolute to remove dependency of parent

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       .github-corner {
         fill: black;
         color: white;
-        position: absolute;
+        position: fixed;
         top: 0;
         border: 0;
         right: 0;
